# orbital

./: .env.example  .gitignore  README.md  ecosystem.config.js  pm2-dev.sh  render.yaml
api/: pyproject.toml  requirements.txt
api/app/: __init__.py  config.py  dependencies.py  main.py  models.py
api/app/agent/: __init__.py  agent.py  auto_profile.py  context_manager.py  tool_definitions.py
api/app/data/: __init__.py  loader.py  pg_connector.py  sources.py
api/app/prompts/: __init__.py  system.md
api/app/providers/: __init__.py  base.py  factory.py  gemini.py  vertex_ai.py
api/app/routers/: artifacts.py  chat.py  config.py  datasets.py  models.py  session_datasets.py  session_events.py  sessions.py
api/app/schemas/: __init__.py  artifacts.py  data_quality.py  datasets.py  sessions.py
api/app/services/: csv_upload.py  schema_generator.py
api/app/storage/: __init__.py  dataset_storage.py  file_storage.py  pg_session_storage.py  schema_storage.py
api/app/tools/: __init__.py  chart.py  memory.py  query.py  report.py  schema.py  stats.py  train_model.py
api/app/utils/: __init__.py  sql_security.py
api/tests/: conftest.py  test_pg_session_storage.py
data/demo/: economic.csv  home_values.csv  rents.csv
data/demo-aggregated/: home_values.csv  mortgage_rates.csv
data/test-data-csv/: ecommerce_orders.csv  employee_departments.csv  flight_routes.csv  fruit_sales.csv  movie_collaborations.csv  personal_spending.csv  recipe_ingredients.csv  social_network.csv  student_grades.csv  weather_daily.csv
scripts/: prepare_demo_data.py  resolve-ports.sh
web/: package-lock.json  package.json  tailwind.config.ts
(+46 files in other folders)
